--- a/library_version/res/layout/dialog_wifi.xml
+++ b/library_version/res/layout/dialog_wifi.xml
@@ -25,6 +25,7 @@
             android:layout_gravity="center"
             android:layout_marginBottom="10dp"
             android:gravity="center"
+            android:textColor="@color/cc_text_blank"
             android:text="更新提示" />
     </FrameLayout>
 
@@ -38,6 +39,7 @@
         android:lineSpacingExtra="10dp"
         android:paddingLeft="20dp"
         android:paddingRight="20dp"
+        android:textColor="@color/cc_text_blank"
         android:text="您目前的网络环境下继续下载将可能会消耗手机流量，请确认是否继续下载" />
 
     <ImageView
@@ -63,6 +65,7 @@
             android:paddingLeft="23dp"
             android:paddingRight="23dp"
             android:gravity="center"
+            android:textColor="@color/cc_text_dark"
             android:text="取消下载"/>
         
         <TextView
@@ -77,6 +80,7 @@
             android:paddingLeft="23dp"
             android:paddingRight="23dp"
             android:gravity="center"
+            android:textColor="@color/cc_orage"
             android:text="继续下载"/>
     </LinearLayout>
 
