--- a/tvcust/src/main/res/layout/dialog_sure.xml
+++ b/tvcust/src/main/res/layout/dialog_sure.xml
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_nomal"
+            android:textSize="@dimen/text_big"
             android:text="确认"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
@@ -34,25 +34,20 @@
 
 
 
-    <LinearLayout
-        android:id="@+id/item_server_dialog_phone"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:background="@drawable/hot_lay_item_white_fade"
-        android:orientation="horizontal">
-
         <TextView
+            android:id="@+id/text_dialog_sure"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingLeft="20dp"
-            android:paddingRight="20dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginBottom="25dp"
+            android:paddingLeft="27dp"
+            android:paddingRight="27dp"
+            android:lineSpacingExtra="5dp"
             android:textColor="@color/sb_text_blank"
             android:gravity="center"
             android:textSize="@dimen/text_nomal"
             android:text="确定取消订单？"/>
 
-    </LinearLayout>
 
     <View
         android:layout_width="match_parent"
@@ -66,7 +61,6 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center_vertical"
-        android:background="@drawable/hot_lay_item_white_fade"
         android:orientation="horizontal" >
 
         <TextView
