--- a/tvcust/src/main/res/layout/fragment_server.xml
+++ b/tvcust/src/main/res/layout/fragment_server.xml
@@ -35,12 +35,193 @@
             android:id="@+id/spring"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:footer="@layout/header_common"
+            app:header="@layout/header_common"
             app:type="follow">
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycle"
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent">
+
+                <android.support.v7.widget.CardView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    app:cardCornerRadius="4dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="200dp">
+
+                            <ImageView
+                                android:id="@+id/temp_server_dialog_bk"
+                                android:layout_width="match_parent"
+                                android:layout_height="125dp"
+                                android:layout_gravity="top|center_horizontal"
+                                android:scaleType="fitXY"
+                                android:src="@drawable/bk_server" />
+
+                            <LinearLayout
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center_horizontal"
+                                android:layout_gravity="bottom|center_horizontal"
+                                android:orientation="vertical">
+
+                                <de.hdodenhof.circleimageview.CircleImageView
+                                    android:id="@+id/img_server_dialog_header"
+                                    android:layout_width="100dp"
+                                    android:layout_height="100dp"
+                                    app:civ_border_width="4dp"
+                                    app:civ_border_overlay="true"
+                                    app:civ_border_color="@color/white"
+                                    app:civ_fill_color="@color/white"
+                                    android:src="@drawable/eva_serv_header" />
+
+                                <TextView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginTop="10dp"
+                                    android:text="在线客服"
+                                    android:textColor="@color/sb_text_blank"
+                                    android:textSize="@dimen/text_big" />
+                            </LinearLayout>
+
+                        </FrameLayout>
+
+
+                        <LinearLayout
+                            android:id="@+id/item_server_dialog_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:text="客服电话"
+                                android:textColor="@color/sb_text_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                            <TextView
+                                android:id="@+id/text_server_dialog_phone"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="20dp"
+                                android:layout_weight="1"
+                                android:gravity="right"
+                                android:text="15684562132"
+                                android:textColor="@color/sb_text_dark_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/line" />
+
+                        <LinearLayout
+                            android:id="@+id/item_server_dialog_qq"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:text="客服QQ"
+                                android:textColor="@color/sb_text_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                            <TextView
+                                android:id="@+id/text_server_dialog_qq"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="20dp"
+                                android:layout_weight="1"
+                                android:gravity="right"
+                                android:text="564841256"
+                                android:textColor="@color/sb_text_dark_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/line" />
+
+                        <LinearLayout
+                            android:id="@+id/item_server_dialog_mail"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:background="@drawable/hot_lay_item_white_fade"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginLeft="20dp"
+                                android:text="客服邮箱"
+                                android:textColor="@color/sb_text_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                            <TextView
+                                android:id="@+id/text_server_dialog_mail"
+                                android:layout_width="0dp"
+                                android:layout_height="wrap_content"
+                                android:layout_marginRight="20dp"
+                                android:layout_weight="1"
+                                android:gravity="right"
+                                android:text="564841256@qq.com"
+                                android:textColor="@color/sb_text_dark_blank"
+                                android:textSize="@dimen/text_nomal" />
+
+                        </LinearLayout>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:layout_marginLeft="20dp"
+                            android:layout_marginRight="20dp"
+                            android:background="@drawable/line" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_weight="1"
+                            android:layout_marginBottom="5dp"
+                            android:gravity="center"
+                            android:text="点击信息即可复制"
+                            android:textColor="@color/sb_text_dark"
+                            android:textSize="@dimen/text_nomal" />
+
+
+                    </LinearLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </ScrollView>
 
         </com.liaoinstan.springview.widget.SpringView>
 
