--- a/tvcust/src/main/res/layout/item_recycle_order.xml
+++ b/tvcust/src/main/res/layout/item_recycle_order.xml
@@ -145,6 +145,21 @@
                 android:text="技术援助" />
 
             <TextView
+                android:id="@+id/text_order_finish"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_nomal"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:gravity="center"
+                android:background="@drawable/shape_rect_corner_blue"
+                android:paddingBottom="5dp"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:paddingTop="5dp"
+                android:text="处理完成" />
+
+            <TextView
                 android:id="@+id/text_order_go"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_nomal"
